# Plugin-Loading

./: CMakeLists.txt  build.bat
ExamplePlugin/: example.cpp  example.h
include/: platform.h  plugin_export.h  plugin_interface.h
src/: main.cpp  plugin_manager.cpp  plugin_manager.h
